[package]
name = "base45"
version ="1.0.2"
authors = ["Rickard Natt och Dag <rickard@hey.com>"]
edition = "2018"
description = "Encoder/decoder for base45"
license = "MIT"
repository = "https://github.com/opendevtools/base45"
homepage = "https://github.com/opendevtools/base45"
readme = "README.md"
keywords = ["base45", "encode", "decode"]
categories = ["encoding"]

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
